--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,4 +2,7 @@ footer{
     width:100%;
     height: 7em;
     background: #0b0b0c;
+    position: relative;
+    bottom: 0 !important;
+    left: 0 !important;
 }
