--- a/src/components/ItemListContainer/Item.scss
+++ b/src/components/ItemListContainer/Item.scss
@@ -51,7 +51,7 @@ body{
 }
 .desc{
     letter-spacing: -0.015em !important;
-    background-color: rgba(4, 122, 0, 0.77);
+    background-color: rgba(4, 122, 0, 0.77) ;
     padding: 1rem;
     border-radius: 1em;
     min-height: 9em;
@@ -71,3 +71,77 @@ body{
     justify-content: space-between;
     align-items: center;
 }
+.image-hover{
+    overflow:hidden;
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:center;
+    align-items: center;
+    z-index: 1;
+    &:hover a{
+        visibility: visible;
+        margin:0 0 0 0em !important;
+        color: rgb(255, 255, 255);
+        
+    }
+    &:hover img{
+        transform: scale(1.1) !important;
+        opacity: .5;
+        cursor: pointer;
+    }
+    img{
+        transition: all 1s ease !important;
+        z-index: -1;
+    }
+
+    a{
+        transition: all .5s ease ;
+        opacity: 1 !important;
+        position: absolute !important;
+        background: black ;
+        cursor: pointer;
+        border: none;
+        padding: 16px 32px;
+        color: #fff;
+        font-size: 24px !important;
+        font-weight: bold;
+        position: relative;
+        border-radius: 12px; 
+        visibility: hidden;
+        margin:0 0 20em!important;
+        &:hover{
+            color: #fff;
+            background: #14191e;
+            
+        }
+        &::before{
+            content: "";
+            position: absolute !important;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg,red,blue,deeppink,blue,red,blue,deeppink,blue);
+            background-size: 800%;
+            border-radius: 10px;
+            filter: blur(10px);
+            animation: glowing 20s linear infinite !important;
+        
+        }
+    }
+}
+
+
+@keyframes glowing{
+    0%{
+        background-position: 0 0;   
+    }
+    50%{
+        background-position: 400% 0;    
+    }
+    100%{
+        background-position: 0 0;   
+    }
+}   
