--- a/src/components/Navbar/Header.scss
+++ b/src/components/Navbar/Header.scss
@@ -60,6 +60,28 @@ ul{
     -webkit-box-shadow: 0px 0px 3px 0px rgba(255,0,0,0.18);
     -moz-box-shadow: 0px 0px 3px 0px rgba(255,0,0,0.18);
     box-shadow: 0px 0px 3px 0px rgba(255,0,0,0.18);
+    background: black ;
+    cursor: pointer;
+    border: none;
+    color: #fff;
+    font-size: 24px !important;
+    font-weight: bold;
+    position: relative;
+    border-radius: 12px; 
+    &::before{
+        content: "";
+        position: absolute !important;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(45deg,red,blue,deeppink,blue,red,blue,deeppink,blue);
+        background-size: 800%;
+        border-radius: 10px;
+        filter: blur(10px);
+        animation: glowing 20s linear infinite !important;
+    }
 }
 .titulo{
     h1{
@@ -77,3 +99,39 @@ ul{
     font-weight: bold;
     font-size: 1.25rem;
 }
+.noto{
+    background: black ;
+    cursor: pointer;
+    border: none;
+    padding: 16px 32px;
+    color: #fff;
+    font-size: 24px !important;
+    font-weight: bold;
+    position: relative;
+    border-radius: 12px; 
+}
+.noto::before{
+    content: "";
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg,red,blue,deeppink,blue,red,blue,deeppink,blue);
+    background-size: 800%;
+    border-radius: 10px;
+    filter: blur(10px);
+    animation: glowing 20s linear infinite !important;
+}
+@keyframes glowing{
+    0%{
+        background-position: 0 0;   
+    }
+    50%{
+        background-position: 400% 0;    
+    }
+    100%{
+        background-position: 0 0;   
+    }
+}   
