creando una pantalla de carga, entre otras funcionalidades

--- a/src/components/Navbar/Header.scss
+++ b/src/components/Navbar/Header.scss
@@ -8,11 +8,15 @@ header{
         flex-direction: row;
         align-items: center;
         flex-wrap: nowrap;
+
         
     }
     span{
         color: aqua;
     }
+}
+.navBar{
+    z-index: -1 !important;
 }
 .container-fluid{
     width: 20% !important;
