--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,12 @@
 *{
-  color: white;
   list-style-type: none;
   text-decoration: none !important;
   padding: 0;
   margin: 0;
+  box-sizing: border-box ;
 }
 
-header{
-  background-color: #272c30;
-  width: 100%;
-}
+
 ::-webkit-scrollbar{
 	width: 10px;
     
@@ -20,11 +17,4 @@ header{
 }
 ::-webkit-scrollbar-thumb{
 	background: rgba(34, 221, 250, 0.596);  
-}
-section{
-  background-color: #29323c;
-  width: 100%;
-  min-height: 100vh;
-  max-height: 800vh;
-  padding-top: 6em;
 }
