--- a/src/components/Flex-box/Flex.scss
+++ b/src/components/Flex-box/Flex.scss
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 6.5em;
 }
 .titulo-f{
     font-size: 2.5rem;
     font-weight: bold;
-    margin-top: .5em;
+    margin-top: 0.5em;
     span{
         color: aqua;
     }
@@ -16,7 +17,7 @@
     font-weight: bold;
     letter-spacing: 5px;
     margin-top: .2em;
-    margin-bottom: .8em;
+    margin-bottom: 1.5em;
 
 }
 .f-item{
