--- a/src/components/ItemDetailContainer/ItemDetailContainer.scss
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.scss
@@ -2,19 +2,17 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-input{
-    padding: .5rem !important;
-    border-radius: 14px;
-    width: 75% !important; 
+    color: white;
 
 }
+ 
+
 .container{
-    background-color: rgba(0, 255, 225, 0.141) !important;
+    background-color: rgba(0, 0, 0, 0.141) !important;
     padding: 1em;
-    margin-bottom: 2em;
-    border-radius: 10px
+    border-radius: 1rem;
+    margin: 7em 0 2em;
+
 }
 .detail-container{
     width: 100%;
@@ -22,21 +20,22 @@ input{
     display: flex;
     gap: 25px;
     align-items: stretch;
-    justify-content: center;
 }
 .left-container{
-    width: 60%;
+    width: 40%;
+    height: 38.5em;
     display: flex;
     flex-direction: column;
     position: relative;
     img{
         width: 100%;
-        height: 100%;
+        height: 37em !important;
         
     }
     
 
 }
+
 .fav-iconn{
     position: absolute;
     top: 0;
@@ -57,7 +56,7 @@ input{
     }
 }
 .right-container{
-    width: 40%;
+    width: 60%;
     display: flex;
     flex-direction: column;
 }
@@ -96,15 +95,7 @@ input{
     align-items: center;
     flex-direction: row;
 }
-.cant{
-    display: flex;
-    gap:10px;
-    align-items:center;
-    justify-content:center;
-    font-weight: bold;
-    flex-wrap: wrap;
-    width: 10em;
-}
+
 .sell{
     display: flex;
     flex-direction: column;
