--- a/src/components/ItemListContainer/Item.scss
+++ b/src/components/ItemListContainer/Item.scss
@@ -4,6 +4,9 @@ body{
 .card{
     max-width: 45em !important;
     font-family: sans-serif !important;
+    background-color: #14191e !important;
+    
+    border-radius: 1em  !important;
         img{
         width: 100% !important;
         height: 100% !important;
@@ -123,7 +126,7 @@ body{
             z-index: -1;
             width: 100%;
             height: 100%;
-            background: linear-gradient(45deg,red,blue,deeppink,blue,red,blue,deeppink,blue);
+            background: linear-gradient(45deg,rgb(255, 255, 255),rgb(0, 213, 255),rgba(0, 34, 255, 0.757),rgb(0, 213, 255),rgb(255, 255, 255),rgb(0, 213, 255),rgba(0, 34, 255, 0.757),rgb(0, 213, 255));
             background-size: 800%;
             border-radius: 10px;
             filter: blur(10px);
