--- a/src/components/Flex-box/Flex.scss
+++ b/src/components/Flex-box/Flex.scss
@@ -7,12 +7,15 @@
 .titulo-f{
     font-size: 2.5rem;
     font-weight: bold;
+    z-index: -2 !important;
+
     margin-top: 0.5em;
     span{
         color: aqua;
     }
 }
 .subtitulo-f{
+    z-index: -2 !important;
     font-size: 1.5rem;
     font-weight: bold;
     letter-spacing: 5px;
