--- a/src/components/ItemDetailContainer/ItemDetailContainer.scss
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.scss
@@ -105,6 +105,13 @@
     h3{
         font-size: 2rem;
     }
+    span{
+        font-size: 1.40rem;
+        background-color: rgba(0, 0, 0, 0.458);
+        padding: .5em .8em;
+        border-radius: 1em;
+        
+    }
 }
 .desc-det{
     font-size: 1rem;
@@ -121,4 +128,9 @@
         font-weight: bold;
         margin: 0rem 0 1rem;
     }
+}
+.agregar{
+    display: flex;
+    
+    justify-content: space-evenly;
 }
