--- a/src/components/Cargando/Carga.scss
+++ b/src/components/Cargando/Carga.scss
@@ -3,10 +3,7 @@
     margin: 0;
     color: rgb(255, 255, 255);
 }
-body{
-    
-    z-index: 1 !important;
-}
+
 span{
     color: aqua;
 }
@@ -17,6 +14,8 @@ span{
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 255, 255, 0.537) !important;
+    z-index: 10;
+    position: absolute;
 }
 .circle_load{
     width: 13.3em;
@@ -29,6 +28,7 @@ span{
     justify-content: center;
     flex-direction: column;
     margin: 0 0 1.5em;
+    z-index: 100;
 }
 .skeleton_carga{
     z-index: -1 !important;
@@ -41,3 +41,6 @@ span{
 
         
 }
+::-webkit-scrollbar{
+    width: 0px;
+} 
