--- a/src/components/ItemDetailContainer/ItemDetailContainer.scss
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.scss
@@ -6,7 +6,41 @@
 
 }
  
-
+.todo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.carrito{
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+    -webkit-box-shadow: 0px 0px 3px 0px rgba(255,0,0,0.18);
+    -moz-box-shadow: 0px 0px 3px 0px rgba(255,0,0,0.18);
+    box-shadow: 0px 0px 3px 0px rgba(255,0,0,0.18);
+    background: black ;
+    cursor: pointer;
+    border: none;
+    color: #fff;
+    font-size: 24px !important;
+    font-weight: bold;
+    position: relative;
+    border-radius: 12px; 
+    &::before{
+        content: "";
+        position: absolute !important;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(45deg,red,blue,deeppink,blue,red,blue,deeppink,blue);
+        background-size: 800%;
+        border-radius: 10px;
+        filter: blur(10px);
+        animation: glowing 20s linear infinite !important;
+    }
+}
 .container{
     background-color: rgba(0, 0, 0, 0.141) !important;
     padding: 1em;
