--- a/src/components/Carrito/Carrito.scss
+++ b/src/components/Carrito/Carrito.scss
@@ -176,3 +176,10 @@
         }
     }
 }
+.button_asd{
+    font-size: .8em !important;
+    font-weight: bold !important;
+    position: absolute;
+    bottom: 1.5em;
+    right: 2em;
+}
