--- a/src/components/Navbar/Header.scss
+++ b/src/components/Navbar/Header.scss
@@ -139,3 +139,16 @@ ul{
         background-position: 0 0;   
     }
 }   
+.itemsInCart{
+    position: absolute;
+    top: -.5em;
+    right: -.5em;
+    font-size: .9em;
+    background-color: rgba(255, 0, 0, 0.85);
+    padding: .140em .5em;
+    border-radius: 50%;
+    font-weight: bold;
+    color: black;
+    
+
+}
