--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,5 +5,17 @@ footer{
     position: relative;
     bottom: 0 !important;
     left: 0 !important;
-    z-index: -1 !important;
+    z-index: 1 !important;
+    .Footer_content{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1em 2em 0 3em;
+    }
+    .Icons{
+        a{
+            margin: .4em .5em;
+
+        }
+    }
 }
