--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,11 @@
   box-sizing: border-box ;
 }
 
+.Items{
+  min-height: 100vh !important;
+  max-height: 700vh !important;
 
+}
 ::-webkit-scrollbar{
 	width: 10px !important;
     
