--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,16 +1,19 @@
 footer{
     width:100%;
-    height: 7em;
     background: #0b0b0c;
     position: relative;
     bottom: 0 !important;
     left: 0 !important;
-    z-index: 1 !important;
+    z-index: 0 !important;
     .Footer_content{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 1em 2em 0 3em;
+        padding: 1em 2em    ;
+    }
+    .footer-text{
+        font-size: 1.25rem;
+        font-weight: 700;
     }
     .Icons{
         a{
