--- a/src/components/Navbar/Header.scss
+++ b/src/components/Navbar/Header.scss
@@ -14,7 +14,11 @@ header{
     span{
         color: aqua;
     }
+    h2{
+        font-size: 1.45rem !important;
+    }
 }
+
 .navBar{
     z-index: 2 !important;
 }
